@@ -5,17 +5,24 @@ import com.projeto.la_couro.service.JwtService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
+    private static final Logger LOGGER = LoggerFactory.getLogger(JwtAuthFilter.class);
+
     private final JwtService jwt;
     private final UsuarioRepository usuarios;
 
@@ -35,10 +42,13 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 var userId = UUID.fromString(sub);
                 var user = usuarios.findById(userId).orElse(null);
                 if (user != null && user.isAtivo()) {
-                    var authTok = new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
+                    List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
+                    var authTok = new UsernamePasswordAuthenticationToken(userId, null, authorities);
                     SecurityContextHolder.getContext().setAuthentication(authTok);
                 }
-            } catch (Exception ignored) {}
+            } catch (Exception ex) {
+                LOGGER.debug("Falha ao validar token JWT: {}", ex.getMessage());
+            }
         }
         chain.doFilter(req, res);
     }
